Fix the overflow bug

--- a/src/style/sass/index.scss
+++ b/src/style/sass/index.scss
@@ -197,6 +197,7 @@ button {
 }
 
 .features {
+  overflow-x: hidden;
   .container-1 {
     display: grid;
     grid-template-columns: 10px auto 140px auto 10px;
@@ -249,6 +250,7 @@ button {
 }
 
 .testimonial {
+  overflow-x: hidden;
   grid-column: 1 / -1;
   position: relative;
   text-align: center;
